# HelloWorld

./: .gitattributes
simple_cmake/: readme.txt
simple_cmake/driver/: CMakeLists.txt  api.cpp  api.h
simple_cmake/driver/lib1/: CMakeLists.txt
simple_cmake/driver/lib1/inc/: lib1.h
simple_cmake/driver/lib1/lib2/: CMakeLists.txt  lib2.cpp  lib2.h
simple_cmake/driver/lib1/src/: lib1.cpp
simple_cmake/driver/lib3/: CMakeLists.txt  lib3.cpp  lib3.h
simple_cmake/driver/lib4/: CMakeLists.txt  lib4.h
simple_cmake/test/: CMakeLists.txt  main.cpp
simple_gtest/: CMakeLists.txt  hello_mock.cc  hello_test.cc
simple_llvm-cov/: CMakeLists.txt  run.sh
simple_llvm-cov/src/: math_utils.cpp
simple_llvm-cov/tests/: test_math.cpp
simple_mp4tomp3/: mp4tomp3.py
simple_tts/: mp3_stat.py  tts.py
